--- a/Site Canino/src/index.html
+++ b/Site Canino/src/index.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-fundo pb-0">
+    <nav class="navbar navbar-expand-lg bg-body-fundo pb-0 fixed-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
-        <img src="imgs/zip.png" style="width:60px; height:60px; margin-bottom: -5px;"></a>
-    <a class="navbar-brand mt-1" href="#"><h4>Dogus8</h4></a>
+        <img src="../imgs/zip.png" style="width:60px; height:60px; margin-bottom: -5px;"></a>
+    <a class="navbar-brand mt-1" href="index.html"><h4>Dogus8</h4></a>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -55,19 +55,19 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="imgs/aliendog.png" class="d-block w-100 img-fluid" style="max-height: 800px; object-fit:contain;">
+        <img src="../imgs/aliendog.png" class="d-block w-100 img-fluid" style="max-height: 800px; object-fit:contain;">
         <div class="carousel-caption text-black">
           <h5>Cachorro Alien Adestrado</h5>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="imgs/nave.png" class="d-block w-100 img-fluid" style="max-height: 600px; object-fit: contain;">
+        <img src="../imgs/nave.png" class="d-block w-100 img-fluid" style="max-height: 600px; object-fit: contain;">
         <div class="carousel-caption">
           <h5>Avistamento Alien</h5> 
         </div>
       </div>
       <div class="carousel-item">
-        <img src="imgs/borzoi.png" class="d-block w-100 img-fluid" style="max-height: 600px; object-fit: contain;">
+        <img src="../imgs/borzoi.png" class="d-block w-100 img-fluid" style="max-height: 600px; object-fit: contain;">
         <div class="carousel-caption">
           <h5>Alien Narigudo</h5>
         </div>
