new changes test

--- a/Site Canino/src/index.html
+++ b/Site Canino/src/index.html
@@ -89,7 +89,7 @@
   <div class="card-body text-center">
     <h5 class="card-title">Como posso participar?</h5>
     <p class="card-text">Para se tornar um AUmigo e viajar nessa aventura espacial, clique aqui e preencha nosso formulário de contato!</p>
-    <a href="contato.html" class="btn btn-success rounded-4">Saiba mais</a>
+    <a href="sobrenos.html" class="btn btn-success rounded-4">Saiba mais</a>
   </div>
 </div>
 </div>
