--- a/Site Canino/src/index.html
+++ b/Site Canino/src/index.html
@@ -6,7 +6,7 @@
     <title>Dogus8</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="../css/estilo.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-body-fundo pb-0 fixed-top">
@@ -54,19 +54,19 @@
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
     </div>
     <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="../imgs/aliendog.png" class="d-block w-100 img-fluid" style="max-height: 800px; object-fit:contain;">
+      <div class="carousel-item active mt-5">
+        <img src="../imgs/aliendog.png" class="d-block w-100 img-fluid" style="max-height: 600px; object-fit:contain;">
         <div class="carousel-caption text-black">
           <h5>Cachorro Alien Adestrado</h5>
         </div>
       </div>
-      <div class="carousel-item">
+      <div class="carousel-item mt-5">
         <img src="../imgs/nave.png" class="d-block w-100 img-fluid" style="max-height: 600px; object-fit: contain;">
         <div class="carousel-caption">
           <h5>Avistamento Alien</h5> 
         </div>
       </div>
-      <div class="carousel-item">
+      <div class="carousel-item mt-5">
         <img src="../imgs/borzoi.png" class="d-block w-100 img-fluid" style="max-height: 600px; object-fit: contain;">
         <div class="carousel-caption">
           <h5>Alien Narigudo</h5>
@@ -82,7 +82,7 @@
       <span class="visually-hidden">Próximo</span>
     </button>
   </div>
-</div>
+   </div>
 
 <div class="container mt-5">
 <div class="card mx-auto" style="width: 18rem;">
