--- a/Site Canino/src/index.html
+++ b/Site Canino/src/index.html
@@ -84,7 +84,7 @@
   </div>
    </div>
 
-<div class="container mt-5">
+<div class="container mt-5 mb-5">
 <div class="card mx-auto" style="width: 18rem;">
   <div class="card-body text-center">
     <h5 class="card-title">Como posso participar?</h5>
@@ -93,6 +93,9 @@
   </div>
 </div>
 </div>
+
+
+  <footer class="text-center text-white mb-4">Desenvolvido por Lara Gazola e Henrique Capel</footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 </body>
